added functionality for double & triple fields

--- a/index.html
+++ b/index.html
@@ -28,28 +28,36 @@
 
     <div class="content">
         <div class="scoreboard"></div>
-        <div class="input">
-            <div class="number" ID="One">1</div>
-            <div class="number" ID="Two">2</div>
-            <div class="number" ID="Three">3</div>
-            <div class="number" ID="Four">4</div>
-            <div class="number" ID="Five">5</div>
-            <div class="number" ID="Six">6</div>
-            <div class="number" ID="Sevem">7</div>
-            <div class="number" ID="Eight">8</div>
-            <div class="number" ID="Nine">9</div>
-            <div class="number" ID="Ten">10</div>
-            <div class="number" ID="Eleven">11</div>
-            <div class="number" ID="Twelve">12</div>
-            <div class="number" ID="Thirteen">13</div>
-            <div class="number" ID="Fourteen">14</div>
-            <div class="number" ID="Fivteen">15</div>
-            <div class="number" ID="Sixteen">16</div>
-            <div class="number" ID="Seventeen">17</div>
-            <div class="number" ID="Eighteen">18</div>
-            <div class="number" ID="Nineteen">19</div>
-            <div class="number" ID="Twenty">20</div>
-            <div class="number" ID="Bull">25</div>
+        <div class="inputContainer">
+            <div class="input">
+                <div class="number" ID="1">1</div>
+                <div class="number" ID="2">2</div>
+                <div class="number" ID="3">3</div>
+                <div class="number" ID="4">4</div>
+                <div class="number" ID="5">5</div>
+                <div class="number" ID="6">6</div>
+                <div class="number" ID="7">7</div>
+                <div class="number" ID="8">8</div>
+                <div class="number" ID="9">9</div>
+                <div class="number" ID="10">10</div>
+                <div class="number" ID="11">11</div>
+                <div class="number" ID="12">12</div>
+                <div class="number" ID="13">13</div>
+                <div class="number" ID="14">14</div>
+                <div class="number" ID="15">15</div>
+                <div class="number" ID="16">16</div>
+                <div class="number" ID="17">17</div>
+                <div class="number" ID="18">18</div>
+                <div class="number" ID="19">19</div>
+                <div class="number" ID="20">20</div>
+            </div>
+            <br>
+            <div class="specials">
+                <div class="number special" ID="Double">Double</div>
+                <div class="number special" ID="Triple">Triple</div>
+                <div class="number special" ID="25">Bull</div>
+                <div class="number special" ID="50">Bullseye</div>
+            </div>
         </div>
     </div>
     <div class="footer">
